2007-09-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (Script.__str__, Packages.__str__):  Add %end
	token to the end of these sections.

	* pykickstart/version.py (stringToVersion):  string -> s.

	* pykickstart/commands/bootloader.py (FC4_Bootloader):  Call
	superclass's __init__ method.

	* pykickstart/commands/device.py (FC3_Device):  self.deviceOpts ->
	self.moduleOpts.

	* pykickstart/commands/network.py:  Don't pass self when calling
	_populateParser outside of the overridden method.
	(F8_NetworkData.__init__):  Pass noipv4 and noipv6 to superclass.

	* pykickstart/commands/raid.py (F7_Raid):  Call superclass's
	__init__method.

2007-09-03  Jeremy Katz  <katzj@redhat.com>

	* pykickstart.spec, setup.py: New version.

	* pykickstart/parser.py (KickstartParser.__init__): Define currentdir

	* pykickstart/commands/network.py (F8_Network._populateParser):
	Fix syntax error

2007-08-31  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-08-29  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/network.py:  ipv4= -> noipv4=, ipv6= -> noipv6=
	on NetworkData objects.

	* pykickstart/commands/network.py (F8_NetworkData, F8_Network):  Add
	the --ipv6= option to the network command.
	* pykickstart/handlers/control.py:  Use F8_NetworkData and F8_Network
	for Fedora 8.

	* pykickstart/commands/network.py:  Reorganize how the parser's
	options are set up so there's much less duplication.

2007-08-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/parser.py (KickstartParser._stateMachine):  Add support
	for the %end directive, and issue DeprecationWarnings if it's not
	used.  It will be a long time before the old syntax goes away, though.
	(KickstartParser._stateMachine):  We only need one script state.

	* validator/ksvalidator:  Don't leave downloaded ks files on the
	system if pykickstart hits a traceback.

2007-08-23  Chris Lumens  <clumens@redhat.com>
